installdir = $(libdir)/enigma2/python/Plugins/SystemPlugins/BluetoothSetup

install_PYTHON = *.py

install_DATA = plugin.png bt_audio.png bt_keyboard.png bt_misc.png bt_rc.png keymap.xml vu_rcu_firmware.bin

if VUSOLO4K
SUBDIRS = vusolo4k
endif

if VUUNO4K
SUBDIRS = vuuno4k
endif

if VUZERO4K
SUBDIRS = vuzero4k
endif

if VUUNO4KSE
SUBDIRS = vuuno4kse
endif

if VUULTIMO4K
SUBDIRS = vuultimo4k
endif

if VUDUO4K
SUBDIRS = vuduo4k
endif
