installdir = $(libdir)/enigma2/python/Plugins/Extensions/StalkerClient

install_PYTHON = *.py

install_DATA = channel_background.png clock.png default.png

if VUSOLO4K
SUBDIRS = vusolo4k
endif

if VUUNO4K
SUBDIRS = vuuno4k
endif

if VUZERO4K
SUBDIRS = vuzero4k
endif

if VUUNO4KSE
SUBDIRS = vuuno4kse
endif

if VUULTIMO4K
SUBDIRS = vuultimo4k
endif

if VUDUO4K
SUBDIRS = vuduo4k
endif

if VUDUO4KSE
SUBDIRS = vuduo4kse
endif
