SUBDIRS = audio Clock1 Clock2 Clock3 Clock4 Clock5 Clock6 Clock7 Clock8 Clock9 Clock10

installdir = $(libdir)/enigma2/python/Plugins/Extensions/LCD4linux/data

install_DATA = *.png skin_data.xml default.lcd default.colorlcd220 default.colorlcd400 default.vuduo2 default.colorlcd720 default.colorlcd480 default.bwlcd255 default.colorlcd800
